# GitHealthCheck-CLI

./: .gitignore  LICENSE  README.md  comprehensive_backend_test.py  dependency_graph  health_summary.txt  metrics_chart.json  pyproject.toml  pytest.ini  requirements.txt  smell_heatmap.json  sustainability_analysis.json
.github/workflows/: ci.yml
backup_tests/: test_git_parser.py  test_integration.py
repo_health_analyzer/: __init__.py
repo_health_analyzer/cli/: __init__.py  main.py  simple_main.py
repo_health_analyzer/core/: __init__.py  analyzer.py  interfaces.py  orchestrator.py
repo_health_analyzer/core/analyzers/: __init__.py  architecture_analyzer.py  code_quality_analyzer.py  code_smell_analyzer.py  documentation_analyzer.py  sustainability_analyzer.py  test_analyzer.py
repo_health_analyzer/core/docs_analyzer/: __init__.py  documentation.py
repo_health_analyzer/core/git_parser/: __init__.py  repository.py
repo_health_analyzer/core/ml/: __init__.py  sustainability.py
repo_health_analyzer/core/static_analyzer/: __init__.py  architecture.py  code_quality.py  code_smells.py
repo_health_analyzer/core/test_analyzer/: __init__.py  coverage.py
repo_health_analyzer/models/: __init__.py  report.py  simple_report.py
repo_health_analyzer/utils/: helpers.py
repo_health_analyzer/visualization/: __init__.py  generator.py
scripts/: demo.py  install.sh
tests/: __init__.py  test_analyzer.py  test_architecture_analyzer.py  test_code_quality_analyzer.py  test_code_smell_analyzer.py  test_comprehensive_system.py  test_documentation_analyzer.py  test_git_parser.py  test_integration.py  test_main_analyzer.py  test_orchestrator.py  test_quick_system.py  test_runner.py  test_simple_demo.py  test_sustainability_analyzer.py  test_test_analyzer.py
