[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-health-analyzer"
version = "1.0.0"
description = "Fully offline CLI tool to analyze local git repositories for comprehensive health metrics including code quality, architecture, smells, tests, documentation, and sustainability."
readme = "README.md"
authors = [{ name = "Repo Health Analyzer Team" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["git", "static-analysis", "code-quality", "architecture", "cli", "offline", "repository-analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

# Minimal CLI-only dependencies - no GUI, no web, no visualization
dependencies = [
  # CLI and UX
  "rich>=10.0.0",
  "click>=8.0.0",
  # Core analysis
  "GitPython>=3.1.0",
  # Optional data processing
  "pandas>=1.5.0",
  "numpy>=1.21.0",
]

[project.optional-dependencies]
# For development and tests
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "black>=24.4.0",
  "flake8>=7.0.0",
  "mypy>=1.10.0"
]

[project.scripts]
rha = "repo_health_analyzer.cli.simple_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_health_analyzer*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
